--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <a href="#" data-section="hobbies">🎮 Hobbies</a>
     <a href="#" data-section="work">💼 Work</a>
     <a href="#" data-section="projects">📂 Projects</a>
-    <a href="#" data-section="contact">📬 Contact</a>
   </div>
 
   <!-- Main content -->
@@ -195,35 +194,29 @@
       </div>
     </div>
 
-    <!-- Contact -->
-    <div id="contact" class="page-section text-center">
-      <h2 class="section-title">📬 Contact Me</h2>
-      <div class="contact-container">
-        <form class="contact-form">
-          <input type="text" name="name" placeholder="Your Name" required>
-          <input type="email" name="email" placeholder="Your Email" required>
-          <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
+  </div> <!-- end main-content -->
 
-        <div class="contact-info mt-3">
-          <p><i class="fas fa-map-marker-alt"></i> Sariaya, Quezon, Philippines</p>
-          <p><i class="fas fa-envelope"></i> marcmanibo24@gmail.com</p>
-          <p><i class="fas fa-phone"></i> +63 938 399 3530</p>
+  <!-- ✅ Footer Contact Section -->
+  <footer class="footer text-center">
+    <div class="footer-container">
+      <h2>📬 Contact Me</h2>
+      <div class="footer-content">
+        <p><i class="fas fa-map-marker-alt"></i> Sariaya, Quezon, Philippines</p>
+        <p><i class="fas fa-envelope"></i> marcmanibo24@gmail.com</p>
+        <p><i class="fas fa-phone"></i> +63 938 399 3530</p>
 
-          <!-- Social Links -->
-          <div class="social-links mt-2">
-            <a href="https://facebook.com/YOUR_USERNAME" target="_blank" title="Facebook">
-              <i class="fab fa-facebook fa-2x"></i>
-            </a>
-            <a href="https://github.com/YOUR_USERNAME" target="_blank" title="GitHub">
-              <i class="fab fa-github fa-2x"></i>
-            </a>
-          </div>
+        <!-- Social Links -->
+        <div class="social-links mt-2">
+          <a href="https://facebook.com/YOUR_USERNAME" target="_blank" title="Facebook">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="https://github.com/YOUR_USERNAME" target="_blank" title="GitHub">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
         </div>
       </div>
     </div>
-  </div> <!-- end main-content -->
+  </footer>
 
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
